--- a/it.xcodeproj/xcshareddata/xcschemes/it.xcscheme
+++ b/it.xcodeproj/xcshareddata/xcschemes/it.xcscheme
@@ -50,7 +50,7 @@
          </BuildableReference>
       </BuildableProductRunnable>
       <StoreKitConfigurationFileReference
-         identifier = "../StoreKit.storekit">
+         identifier = "../../StoreKit.storekit">
       </StoreKitConfigurationFileReference>
    </LaunchAction>
    <ProfileAction
